# manga

./: .gitignore  LICENSE  README.md  main.py  manga-list.rst  pyproject.toml
.zed/: settings.json
Haikyu!!/: Haikyū_ハイキュー.json
mangas/Attack on Titan - 進撃の巨人 - Shingeki no Kyojin/: info.json  upload_records.json
mangas/Bleach - ブリーチ/: info.json  upload_records.json
mangas/DICE: The Cube That Changes/: info.json  upload_records.json
mangas/DICE: The Cube That Changes Everything/: info.json  upload_records.json
mangas/DICE: The Cube That Changes Everything Wiki/: info.json  upload_records.json
mangas/Demon Slayer - Kimetsu no Yaiba/: info.json  upload_records.json
mangas/Deserter/: info.json  upload_records.json
mangas/Fullmetal Alchemist/: info.json  upload_records.json
mangas/Gantz:G - ガンツ:G/: info.json  upload_records.json
mangas/Haikyū!! - ハイキュー!!/: info.json  upload_records.json
mangas/No Longer Human - 人間失格 - Ningen Shikkaku/: info.json  upload_records.json
mangas/Parasyte - 寄生獣 - Kiseijū/: info.json  upload_records.json
mangas/Uzumaki - うずまき/: info.json  upload_records.json
metadata/: upload_records.py
parsers/: folder_parser.py  image_collector.py
processors/: __init__.py  manga_processor.py
progress/: __init__.py  tracker.py
selectors/: __init__.py  group_selector.py
src/: __init__.py
src/generators/: __init__.py  manga_list.py
src/metadata/: __init__.py  manager.py  upload_records.py
src/models/: __init__.py  chapter.py  metadata.py  upload.py
src/parsers/: __init__.py  folder_parser.py  (+1 more)
uploaders/: imgchest.py
(+4 files in other folders)
